<resources>
    <string name="app_name">Exercise 2</string>
    <string name="title_app">Main Activity</string>
    <string name="button_activity_1">Activity 1</string>
    <string name="button_activity_2">Activity 2</string>
    <string name="scroll_button_1">Button 1</string>
    <string name="scroll_button_2">Button 2</string>
    <string name="scroll_button_3">Button 3</string>
    <string name="scroll_button_4">Button 4</string>
    <string name="scroll_button_5">Button 5</string>
    <string name="scroll_button_6">Button 6</string>
    <string name="scroll_button_7">Button 7</string>
    <string name="scroll_button_8">Button 8</string>
    <string name="scroll_button_9">Button 9</string>
    <string name="scroll_button_10">Button 10</string>
</resources>