<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityOneButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="640dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="7dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/titleMainActivity"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="#269"
            android:gravity="center"
            android:text="@string/title_app" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/activityFirstButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_activity_1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/activitySecondButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_activity_2" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>